--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -64,6 +64,8 @@ r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 r.ReflectionMethod=1
 r.Shadow.Virtual.Enable=1
+r.AllowGlobalClipPlane=False
+r.Lumen.TraceMeshSDFs=1
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_TopDownBP",NewGameName="/Script/BehaviorTreeLearn")
